--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       href="images/favicon-32x32.png"
     />
 
-    <title>Frontend Mentor | Meet landing page</title>
+    <title>Social Chart landing page</title>
   </head>
   <body>
     <!-- LOGO START  -->
